--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "yup": "^1.3.2"
   },
   "devDependencies": {
+    "@aplinkosministerija/biip-prettier-config": "^1.1.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -43,5 +44,6 @@
   },
   "engines": {
     "node": ">=20.0.0 <21.0.0"
-  }
+  },
+  "prettier": "@aplinkosministerija/biip-prettier-config"
 }
