--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@aplinkosministerija/biip-prettier-config": "^1.1.0",
+    "@aplinkosministerija/eslint-config-biip-react": "^1.0.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -45,5 +46,8 @@
   "engines": {
     "node": ">=20.0.0 <21.0.0"
   },
-  "prettier": "@aplinkosministerija/biip-prettier-config"
+  "prettier": "@aplinkosministerija/biip-prettier-config",
+  "eslintConfig": {
+    "extends": "@aplinkosministerija/eslint-config-biip-react"
+  }
 }
