--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@sentry/react": "^7.77.0",
     "axios": "^1.5.1",
     "formik": "^2.4.5",
     "lt-codes": "ambrazasp/lt-codes",
