--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "@sentry/react": "^7.77.0",
     "axios": "^1.5.1",
+    "date-fns": "^2.30.0",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "lt-codes": "ambrazasp/lt-codes",
