--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -17,5 +17,5 @@ jobs:
       enable-sentry: true
       build-args: |
         NODE_ENV=development
-        REACT_APP_SENTRY_ENV=development
-        REACT_APP_SENTRY_DSN=https://0fadf707c6574ab792a4dd2f8d729ea2@sentry.biip.lt/42
+        VITE_SENTRY_ENV=development
+        VITE_SENTRY_DSN=https://0fadf707c6574ab792a4dd2f8d729ea2@sentry.biip.lt/42
