--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NODE_ENV=local
 VITE_APP_SENTRY_DSN=
 VITE_APP_SENTRY_ENV=local
-VITE_PROXY = https://dev.internalapi.biip.lt/zvejyba/api
+VITE_PROXY_URL = https://dev.internalapi.biip.lt/zvejyba/api
