--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -19,3 +19,6 @@ jobs:
         NODE_ENV=development
         VITE_SENTRY_ENV=development
         VITE_SENTRY_DSN=https://0fadf707c6574ab792a4dd2f8d729ea2@sentry.biip.lt/42
+        VITE_PROXY_URL=https://dev-internalapi.biip.lt/zvejyba/api
+        VITE_UETK_URL=https://dev-uetk.biip.lt/api
+        VITE_GIS_URL=https://dev-gis.biip.lt/api
