--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NODE_ENV=local
 VITE_APP_SENTRY_DSN=
 VITE_APP_SENTRY_ENV=local
-VITE_PROXY_URL=https://internalapi.biip.lt/zvejyba/api
+VITE_PROXY_URL=https://zvejyba.biip.lt/api
 VITE_UETK_URL=https://uetk.biip.lt/api
 VITE_GIS_URL=https://gis.biip.lt/api
