--- a/.github/workflows/deploy-development.yml
+++ b/.github/workflows/deploy-development.yml
@@ -21,3 +21,4 @@ jobs:
         VITE_SENTRY_DSN=https://0fadf707c6574ab792a4dd2f8d729ea2@sentry.biip.lt/42
         VITE_UETK_URL=https://dev-uetk.biip.lt/api
         VITE_GIS_URL=https://dev-gis.biip.lt/api
+        VITE_MAPS_HOST=https://dev-maps.biip.lt
