added env example (maps.biip.lt) variable

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,4 @@ VITE_APP_SENTRY_ENV=local
 VITE_PROXY_URL=https://zvejyba.biip.lt/api
 VITE_UETK_URL=https://uetk.biip.lt/api
 VITE_GIS_URL=https://gis.biip.lt/api
+VITE_MAPS_HOST=https://maps.biip.lt
