--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aplinkosministerija/design-system": "^1.2.21",
     "@reduxjs/toolkit": "^1.9.7",
     "@sentry/react": "^7.77.0",
     "axios": "^1.7.9",
